Bug 168980 - A specific DOCX can't be saved as FODT
Summary: A specific DOCX can't be saved as FODT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-21 10:12 UTC by Mike Kaganski
Modified: 2025-10-22 07:41 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A problematic DOCX (minimized version) (3.68 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-10-21 10:12 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-10-21 10:12:02 UTC
Created attachment 203466 [details]
A problematic DOCX (minimized version)

Open the attachment, and save as FODT.

=> Error saving the document Blank3min2:
   Write Error.
   The file could not be written.

Converting from command line also fails.
Comment 1 Mike Kaganski 2025-10-21 13:55:33 UTC
https://gerrit.libreoffice.org/c/core/+/192796
Comment 2 Commit Notification 2025-10-21 18:57:59 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0dc93fddcc751a28cfdb936f61bb6f0f4812e4b9

tdf#168980: don't use shape Z-order to identify shapes

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-10-22 07:41:20 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/e6875a474b394a9d01bd6c05414d8e704f8bb29a

tdf#168980: don't use shape Z-order to identify shapes

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.